# Copyright 2024 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load(
    "@envoy//bazel:envoy_build_system.bzl",
    "envoy_cc_library",
)
load("@envoy_api//bazel:api_build_system.bzl", "api_proto_package")

package(default_visibility = ["//visibility:public"])

api_proto_package()

envoy_cc_library(
    name = "jwe_filter_lib",
    srcs = ["jwe_filter.cc"],
    hdrs = ["jwe_filter.h"],
    repository = "@envoy",
    deps = [
        ":pkg_cc_proto",
        "@com_github_gabime_spdlog//:spdlog",
        "@com_google_protobuf//:json_util",
        "@cppcodec",
        "@envoy//envoy/http:filter_interface",
        "@envoy//source/common/buffer:buffer_lib",
        "@envoy//source/common/http:headers_lib",
        "@sf_apis//:cc_jwt_proto",
        "@trustflow_envoy//trustflow_envoy/common/crypto:gcm",
        "@trustflow_envoy//trustflow_envoy/common/crypto:key_utils",
        "@trustflow_envoy//trustflow_envoy/common/crypto:rsa",
    ],
)

envoy_cc_library(
    name = "config",
    srcs = ["config.cc"],
    hdrs = ["config.h"],
    repository = "@envoy",
    deps = [
        ":jwe_filter_lib",
        "@envoy//envoy/registry",
        "@envoy//envoy/server:filter_config_interface",
        "@envoy//source/extensions/filters/http/common:factory_base_lib",
    ],
)
